<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Bloom</string>
    <string name="action_settings">Settings</string>
    <string name="action_add_bloom">New Bloom</string>
    <string name="bloom">Bloom</string>
    <string name="start_bloom">Start your Bloom</string>
    <string name="view_bloom">Your Blooms</string>
    <string name="settings">Settings</string>
    <string name="bloom_preview">Bloom Preview</string>
    <string name="bloom_name">Bloom Name</string>
    <string name="bloom_grid">Bloom Grid</string>
    <string name="stop_alarm">Stop Alarm</string>
    <string name="take_picture">Capture</string>
    <string name="flip_camera">Flip Camera</string>
    <string name="preview">Preview</string>
    <string name="clear_cache_menu">Clear Caches</string>
    <string name="clear_cache_complete_toast">Caches have been cleared</string>
    <string name="imageview_description">Image Thumbnail</string>
    <string name="no_network_connection_toast">No network connection found</string>
	<string name="sunday_abbrev">Su</string>
	<string name="monday_abbrev">M</string>
	<string name="tuesday_abbrev">T</string>
	<string name="wednesday_abbrev">W</string>
	<string name="thursday_abbrev">Th</string>
	<string name="friday_abbrev">F</string>
	<string name="saturday_abbrev">S</string>

</resources>