<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_gravity="center"
    android:gravity="center"
    android:orientation="vertical" >
    
    <Button 
        android:layout_width="190dip"
        android:layout_height="wrap_content"
        android:layout_margin="10dip"
        android:text="@string/start_bloom"
        android:onClick="onNewBloomClick"/>
    
    <Button 
        android:layout_width="190dip"
        android:layout_height="wrap_content"
        android:layout_margin="10dip"
        android:text="@string/view_bloom"
        android:onClick="onPreviewBloomClick" />
    
    <Button 
        android:layout_width="190dip"
        android:layout_height="wrap_content"
        android:layout_margin="10dip"
        android:text="@string/settings" 
        android:onClick="onSettingsClick" />

</LinearLayout>